--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -14,7 +14,7 @@
 
 		  	<div class="actions row">
 			  	<div class="col-xs-12">
-			  		<%= f.submit "Enviame Instrucciones",:class=>"right waves-effect waves-light btn waves-input-wrapper",:disabled=>"disabled" %>
+			  		<%= f.submit "Enviame Instrucciones",:class=>"right waves-effect waves-light btn waves-input-wrapper"%>
 			  	</div>
 		  	</div>
 		  	<div class="row">
