--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,30 @@
-<h2>Change your password</h2>
+<div class="row">
+   <div class="-xs-12">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { :class=>"row center-xs",method: :put }) do |f| %>
+         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 z-depth-3 white cero-padding">
+            <h5 class="fondos_h text-shadow">Change your password</h5>
+            <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+            <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
+            <div class="field">
+               <%= f.label :password, "New password" %><br />
+               <% if @minimum_password_length %>
+               <em>(<%= @minimum_password_length %> characters minimum)</em>
+               <% end %><br />
+               <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+            </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+            <div class="field">
+               <%= f.label :password_confirmation, "Confirm new password" %><br />
+               <%= f.password_field :password_confirmation, autocomplete: "off" %>
+            </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+            <div class="actions">
+               <%= f.submit "Change my password" %>
+            </div>
+            <%= render "devise/shared/links" %>
+         </div>
+      <% end %>
+   </div>
+</div>
