--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,17 +7,21 @@
 
             <%= f.hidden_field :reset_password_token %>
 
-            <div class="field">
-               <%= f.label :password, "New password" %><br />
-               <% if @minimum_password_length %>
-               <em>(<%= @minimum_password_length %> characters minimum)</em>
-               <% end %><br />
-               <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+            <div class="field row">
+               <div class="col-xs-12 input-field">
+                  <%= f.label :password, "New password" %><br />
+                  <% if @minimum_password_length %>
+                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                  <% end %><br />
+                  <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+               </div>
             </div>
 
-            <div class="field">
-               <%= f.label :password_confirmation, "Confirm new password" %><br />
-               <%= f.password_field :password_confirmation, autocomplete: "off" %>
+            <div class="field row">
+               <div class="col-xs-12 input-field">
+                  <%= f.label :password_confirmation, "Confirm new password" %><br />
+                  <%= f.password_field :password_confirmation, autocomplete: "off" %>
+               </div>
             </div>
 
             <div class="actions">
