--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,7 +7,7 @@
 			
 		  	<div class="field row">
 			  	<div class="col-xs-12 input-field">
-			  		<%= f.label :email %><br />
+			  		<%= f.label :email %>
 			    	<%= f.email_field :email, autofocus: true %>
 			  	</div>
 		  	</div>
