--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-   <div class="-xs-12">
+   <div class="col-xs-12">
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { :class=>"row center-xs",method: :put }) do |f| %>
          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 z-depth-3 white cero-padding">
             <h5 class="fondos_h text-shadow">Change your password</h5>
