--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -2,7 +2,7 @@
    <div class="col-xs-12">
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { :class=>"row center-xs",method: :put }) do |f| %>
          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 z-depth-3 white cero-padding">
-            <h5 class="fondos_h text-shadow">Change your password</h5>
+            <h5 class="fondos_h text-shadow">Cambiar tu contraseña</h5>
             <%= devise_error_messages! %>
 
             <%= f.hidden_field :reset_password_token %>
@@ -25,7 +25,7 @@
             </div>
 
             <div class="actions">
-               <%= f.submit "Change my password" %>
+               <%= f.submit "Cambiar mi contraseña",,:class=>"right waves-effect waves-light btn waves-input-wrapper"%>
             </div>
             <%= render "devise/shared/links" %>
          </div>
