--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -25,7 +25,7 @@
             </div>
 
             <div class="actions">
-               <%= f.submit "Cambiar mi contraseña",,:class=>"right waves-effect waves-light btn waves-input-wrapper"%>
+               <%= f.submit "Cambiar mi contraseña",:class=>"right waves-effect waves-light btn waves-input-wrapper"%>
             </div>
             <%= render "devise/shared/links" %>
          </div>
