--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -24,10 +24,16 @@
                </div>
             </div>
 
-            <div class="actions">
-               <%= f.submit "Cambiar mi contraseña",:class=>"right waves-effect waves-light btn waves-input-wrapper"%>
+            <div class="row">
+               <div class="col-xs-12">
+                  <%= f.submit "Cambiar mi contraseña",:class=>"right waves-effect waves-light btn waves-input-wrapper"%>
+               </div>
             </div>
-            <%= render "devise/shared/links" %>
+            <div class="row">
+               <div class="col-xs-12 center">
+                  <%= render "devise/shared/links" %>
+               </div>
+            </div>
          </div>
       <% end %>
    </div>
