--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -3,7 +3,9 @@
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { :class=>"row center-xs",method: :put }) do |f| %>
          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 z-depth-3 white cero-padding">
             <h5 class="fondos_h text-shadow">Cambiar tu contraseña</h5>
-         
+            <% flash.each do |key, value| %>
+               <div class="flash <%= key %>"><%= value %></div>
+            <% end %>
 
             <%= f.hidden_field :reset_password_token %>
 
