--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,10 +1,10 @@
 <% require 'devise/version' %>
 
-<p><%= t('.greeting', :recipient => @resource.email, :default => "Hola #{@resource.email}!") %></p>
+<p style="font-size:2em; color:red;"><%= t('.greeting', :recipient => @resource.email, :default => "Hola #{@resource.email}!") %></p>
 
-<p><%= t('.instruction', :default => "Someone has requested a link to change your password, and you can do this through the link below.") %></p>
+<p><%= t('.instruction', :default => "Alguien ha pedido un enlace para cambiar tu password. puedes hacerlo a través del siguiente enlace.") %></p>
 
-<p><%= link_to t('.action', :default => "Change my password"), edit_password_url(@resource, :reset_password_token => (Devise::VERSION.start_with?('3.') ? @token : @resource.reset_password_token)) %></p>
+<p><%= link_to t('.action', :default => "Cambiar mi contraseña"), edit_password_url(@resource, :reset_password_token => (Devise::VERSION.start_with?('3.') ? @token : @resource.reset_password_token)) %></p>
 
-<p><%= t('.instruction_2', :default => "If you didn't request this, please ignore this email.") %></p>
-<p><%= t('.instruction_3', :default => "Your password won't change until you access the link above and create a new one.") %></p>
+<p><%= t('.instruction_2', :default => "Si tú no solicitaste este cambio, por favor ignora este mail,") %></p>
+<p><%= t('.instruction_3', :default => "tu contraseña no se modificará si no hasta que accedas al link de arriba.") %></p>
