--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -44,7 +44,7 @@
 		<div class="file-field input-field col s4">
 			<div class="btn">
 				<span>Imagen</span>
-				<%= f.file_field :image, :calss=>"file" %>
+				<%= f.file_field :image, :class=>"file" %>
 			</div>
 			<div class="file-path-wrapper">
 				<input class="file-path validate valid" type="text" />
