--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,6 +1,6 @@
 <% require 'devise/version' %>
 
-<p style="font-size:2em; color:red;"><%= t('.greeting', :recipient => @resource.email, :default => "Hola #{@resource.email}!") %></p>
+<p style="font-size:2em; color:red;"><%= t('.greeting', :recipient => @resource.email, :default => "¡Hola #{@resource.email}!") %></p>
 
 <p><%= t('.instruction', :default => "Alguien ha pedido un enlace para cambiar tu password. puedes hacerlo a través del siguiente enlace.") %></p>
 
