--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,5 +1,5 @@
 <diw class="row">
-	<%= form_for(@tag,html:{:class =>"col-xs-12"}) do |f| %>
+	<%= form_for(@tag,html:{:class =>"col-xs-12 col-sm-12 col-md-6 col-lg-6"}) do |f| %>
 		<div class="row">
 			<div class="input-field col s12">
 				<%= f.text_field :name,:class =>"materialize-textarea"%>
