--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,4 +1,4 @@
-<diw class="row">
+<div class="row center-xs">
 	<%= form_for(@tag,html:{:class =>"col-xs-12 col-sm-12 col-md-6 col-lg-6"}) do |f| %>
 		<div class="row">
 			<div class="input-field col s12">
@@ -27,4 +27,4 @@
 			</div>
 		</div>
 	<%end%>
-</diw>
+</div>
