--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,5 +1,6 @@
-<div class="row center-xs">
-	<%= form_for(@tag,html:{:class =>"col-xs-12 col-sm-12 col-md-6 col-lg-6"}) do |f| %>
+<div class="row center-xs marin-top">
+	<%= form_for(@tag,html:{:class =>"col-xs-12 col-sm-12 col-md-6 col-lg-6 white z-depth-2"}) do |f| %>
+		<h5 class="fondos_h text-shadow">Editar Tag</h5>
 		<div class="row">
 			<div class="input-field col s12">
 				<%= f.text_field :name,:class =>"materialize-textarea"%>
