--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -34,7 +34,7 @@
 					</div>
 					<div class="native_button">
 						<div>
-							<div class="fb-like" data-href="http://dowloadapps.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>    
+							<div class="fb-like" data-href="https://dowloadapps.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>    
 						</div>
 					</div>
 				</div>
