--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row center-xs">
 	<%= render "parciales/tags" %>
-	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding">
+	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 cero-padding sliderP">
 		<%= render "articles/sliderpatallacompleta" %>
 	</div>
 	<div class="col-xs-12 col-sm-12 col-md-11 col-lg-10 marin-top cero-padding">
@@ -16,3 +16,15 @@
 	</div>
 </div>
 <%= render "parciales/footer" %>
+
+<!-- boton flotante de compartir redes sociales -->
+<div class="fixed-action-btn " style="bottom: 49px; right: 0px;">
+	<a class="btn-floating btn-large black"><i class="fa fa-share-alt"></i></a>
+	<ul>
+		<li><a class="btn-floating red" href='http://plus.google.com/share?url=http://dowloadapps.herokuapp.com/category/<%@tag.name%>' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-google-plus"></i></a></li><!-- boton de google -->
+
+		<li><a class="btn-floating blue" href='https://twitter.com/intent/tweet?url=http://dowloadapps.herokuapp.com/&amp;text=dowloadapps&amp;via=dowloadapps' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-twitter"></i></a></li><!-- boton de twitter -->
+
+		<li><a href="http://www.facebook.com/sharer.php?u=http://dowloadapps.herokuapp.com/" class="btn-floating blue darken-4" rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360'); return false;"><i class="fa fa-facebook"></i></a></li><!-- boton de facebook -->
+	</ul>
+</div>
