--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -32,10 +32,10 @@
       <div class="center-align col s12 cero-padding">
         <%= render "devise/shared/links" %>
         <div class="row">
-          <%= link_to "Sign in with Facebook",user_facebook_omniauth_authorize_path(:facebook) %>
+          <%= link_to "Sign in with Facebook",user_facebook_omniauth_authorize_path %>
         </div>
         <div class="row">
-          <%= link_to "Sign in with Facebook",user_twitter_omniauth_authorize_path(:twitter) %>
+          <%= link_to "Sign in with Facebook",user_twitter_omniauth_authorize_path %>
         </div>
       </div>
     </div>
