agregando auth facebook tweter

--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -37,6 +37,7 @@
         <div class="row">
           <%= link_to "Sign in with twitter",user_omniauth_authorize_path(:twitter) %>
         </div>
+        ¿Aún no inicias sesión? Haz <%= link_to 'click aquí', entrar_path %>
       </div>
     </div>
   <% end %>
