--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -1,55 +1,20 @@
-<div class="row center-xs marin-top">
-	<div class="col-xs-12 col-sm-7 col-md-6 col-lg-5 sombras">
-		<h5 class="fondos_h text-shadow">Crear Cuenta</h5>
-   		<div class="row white ">
-		  <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html:{:class =>"col s12"}) do |f| %>
+<h2>Sign up</h2>
 
-		    <div class="row">
-		    
-		      <div class="input-field col s12 cero-padding">
-		        <i class="fa fa-user prefix"></i>
-		        <%= f.text_field :username,required:"required"%>
-		        <%= f.label :username,"Nombre de Usuario" %>
-		      </div>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
 
-		      <div class="input-field col s12 cero-padding">
-		        <i class="fa fa-envelope prefix"></i>
-		        <%= f.email_field :email,required:"required"%>
-		        <%= f.label :email,"Correo Electronico" %>
-		      </div>
-		      
-			<% if @user.password_required? %>
-		      <div class="input-field col s12 cero-padding">
-		        <i class="fa fa-user-secret prefix"></i>
-		        <% if @minimum_password_length %>
-		        <em><% @minimum_password_length %></em>
-		        <% end %><br />
-		        <%= f.label :password do%>
-		          <em>Contraseña( 8 Caracteres minimo)</em>
-		        <%end%>
-		        <%= f.password_field :password, autocomplete: "off",required:"required" %>
-		      </div>
+  <div><%= f.label :email %><br />
+  <%= f.email_field :email, :autofocus => true %></div>
 
-		      <div class="input-field col s12 cero-padding">
-		        <i class="fa fa-user-secret prefix"></i>
-		        <%= f.password_field :password_confirmation, autocomplete: "off" ,required:"required"%>
-		        <%= f.label :password_confirmation,"Confirmar Contreseña" %>
-		      </div>
-			<%end%>
-		      
-		       <div class="actions col s12 right-align cero-padding">
-		         <button class="btn waves-effect waves-light valign btn-ingresar" type="submit" name="action" style="width: 100%;height:35px;">
-		         CREAR CUENTA
-		         <i class="fa fa-paper-plane right"></i>
-		        </button>
-		      </div>
-		      <div class="center-align col s12 cero-padding">
-		        <%= render "devise/shared/links" %>
-		      </div>
-		    </div>
-		  <% end %>
-		</div>
-	</div>
-</div>
+	<% if @user.password_required? %>
+ 		<div><%= f.label :password %><br />
+	 	<%= f.password_field :password %></div>
+	 
+		<div><%= f.label :password_confirmation %><br />
+	 	<%= f.password_field :password_confirmation %></div>
+ 	<% end %>
 
+  <div><%= f.submit "Sign up" %></div>
+<% end %>
 
+<%= render "devise/shared/links" %>
