--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -1,6 +1,12 @@
 <div class="row white">
   <%= form_for(resource, as: resource_name, url: session_path(resource_name),html:{:id=>"iniciar_sesion" ,:class =>"col s12 "}) do |f| %>
     <div class="row">
+      <div class="col-xs-6">
+        <%= link_to "Sign in with Facebook",user_omniauth_authorize_path(:facebook),:class=>"waves-effect waves-light btn" %>
+      </div>
+      <div class="-col-xs-6">
+         <%= link_to "Sign in with twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect waves-light btn" %>
+      </div>
       <div class="input-field col s12 cero-padding">
         <i class="fa fa-envelope prefix"></i>
         <%= f.email_field :email, autofocus: true,:id=>"users_email" %>
@@ -31,12 +37,6 @@
       </div>
       <div class="center-align col s12 cero-padding">
         <%= render "devise/shared/links" %>
-        <div class="row">
-          <%= link_to "Sign in with Facebook",user_omniauth_authorize_path(:facebook) %>
-        </div>
-        <div class="row">
-          <%= link_to "Sign in with twitter",user_omniauth_authorize_path(:twitter) %>
-        </div>
       </div>
     </div>
   <% end %>
