--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -1,12 +1,17 @@
 <div class="row white">
   <%= form_for(resource, as: resource_name, url: session_path(resource_name),html:{:id=>"iniciar_sesion" ,:class =>"col s12 "}) do |f| %>
-    <div class="row">
-      <div class="col-xs-6">
-        <%= link_to "Sign in with Facebook",user_omniauth_authorize_path(:facebook),:class=>"waves-effect waves-light btn" %>
+    <div class="row center-xs">
+      <div class="col-xs-12">
+        <div class="row">
+          <div class="col-xs-6">
+            <%= link_to "Ingresa con Facebook",user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn" %>
+          </div>
+          <div class="-col-xs-6">
+             <%= link_to "Ingresa con Twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn" %>
+          </div>
+        </div>
       </div>
-      <div class="-col-xs-6">
-         <%= link_to "Sign in with twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect waves-light btn" %>
-      </div>
+      
       <div class="input-field col s12 cero-padding">
         <i class="fa fa-envelope prefix"></i>
         <%= f.email_field :email, autofocus: true,:id=>"users_email" %>
