--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -2,7 +2,7 @@
   <%= form_for(resource, as: resource_name, url: session_path(resource_name),html:{:id=>"iniciar_sesion" ,:class =>"col s12 "}) do |f| %>
     <div class="row center-xs">
       <div class="col-xs-12">
-        <div class="row">
+        <div class="row marin-top">
           <div class="col-xs-6">
             <%= link_to "Ingresa con Facebook",user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn" %>
           </div>
