--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -1,12 +1,12 @@
 <div class="row white">
   <%= form_for(resource, as: resource_name, url: session_path(resource_name),html:{:id=>"iniciar_sesion" ,:class =>"col s12 "}) do |f| %>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 cero-padding">
         <div class="row marin-top">
           <div class="col-xs-6 center">
             <%= link_to "Ingresa con Facebook",user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn" %>
           </div>
-          <div class="-col-xs-6 center">
+          <div class="col-xs-6 center">
              <%= link_to "Ingresa con Twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn" %>
           </div>
         </div>
