--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -6,6 +6,9 @@ body{
 	text-rendering:optimizeLegibility;
 	overflow-x: hidden;
 }
+.width-100{
+	width: 100% !important;
+}
 .overflow-x{
 	overflow-x:hidden;
 }
