--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -4,10 +4,10 @@
       <div class="col-xs-12 cero-padding">
         <div class="row marin-top">
           <div class="col-xs-6 center">
-            <%= link_to "Ingresa con Facebook",user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn width-100" %>
+            <%= link_to "Ingresa con Facebook",user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn width-100",:id=>"sign_in"  %>
           </div>
           <div class="col-xs-6 center">
-             <%= link_to "Ingresa con Twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn width-100",:id=>"sign_in" %>
+             <%= link_to "Ingresa con Twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn width-100"%>
           </div>
         </div>
       </div>
