--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -11,6 +11,7 @@
 
 // materialize/components
 @import "materialize/components/global";
+@import "materialize/components/grid";
 @import "materialize/components/navbar";
 @import "materialize/components/roboto";
 @import "materialize/components/typography";
