--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 		<%= auto_discovery_link_tag(:rss, "http://dowloadapps.herokuapp.com/feed") %>
 		<link rel="alternate" hreflang="es" href="http://dowloadapps.herokuapp.com/" />
 	 	<meta name="google-site-verification" content="GZLY42eex8ZXkKsdG8nlMJeflOHqUb3A66ylpeRCrAo" />
+	 	<meta property="fb:app_id" content="316086441848514" />
 	</head>
 <body>
   <h1 class="fondos_h text-shadow oculto" >Aplicaciones para Android</h1>
@@ -62,22 +63,22 @@
 	</div>
 
 	<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '316086441848514',
-      xfbml      : true,
-      version    : 'v2.6'
-    });
-  };
+	  window.fbAsyncInit = function() {
+	    FB.init({
+	      appId      : '316086441848514',
+	      xfbml      : true,
+	      version    : 'v2.6'
+	    });
+	  };
 
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
+	  (function(d, s, id){
+	     var js, fjs = d.getElementsByTagName(s)[0];
+	     if (d.getElementById(id)) {return;}
+	     js = d.createElement(s); js.id = id;
+	     js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
+	     fjs.parentNode.insertBefore(js, fjs);
+	   }(document, 'script', 'facebook-jssdk'));
+	</script>
 
 </body>
 </html>
