--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -41,9 +41,7 @@
 			</ul>
 			<ul class="right">
 				<li class="transparent">
-					<%= form_tag articles_path, :method => 'get' do %>
-						<%= search_field_tag :search, params[:search]%>
-					<%end%>
+					<a id="buscador"><i class="fa fa-search" aria-hidden="true"></i></a>
 				</li>
 			</ul>
 			
@@ -159,3 +157,17 @@
 		</div>
 	</nav>
 </header>
+
+<nav class="buscador animation-out light-blue darken-4">
+   <div class="nav-wrapper">
+      <%= form_tag articles_path, :method => 'get' do %>
+         <div class="input-field">
+            <%= search_field_tag :search, params[:search],:id=>"search",:class=>"position-fixed"%>
+            <label for="search">
+               <i class="fa fa-search" aria-hidden="true"></i>
+            </label>
+            <i id="salir" class=" fa fa-times material-icons" aria-hidden="true"></i>
+         </div>
+      <%end%>
+   </div>
+</nav>
