--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -482,6 +482,11 @@ nav{
 		}
 	}
 }
+#buscador{
+	i{
+		font-size: 1.2em;
+	}
+}
 .animacion{
 	transform: translateY(0px) !important;
 	transition: all 0.5s;
