--- a/app/views/parciales/_navegacion.html.erb
+++ b/app/views/parciales/_navegacion.html.erb
@@ -162,7 +162,7 @@
    <div class="nav-wrapper">
       <%= form_tag articles_path, :method => 'get' do %>
          <div class="input-field">
-            <%= search_field_tag :search, params[:search],:id=>"search",:class=>"position-fixed"%>
+            <%= search_field_tag :search, params[:search],:id=>"search",:class=>"position-fixed",:placeholder=>"Buscar apps"%>
             <label for="search">
                <i class="fa fa-search" aria-hidden="true"></i>
             </label>
