--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -4,10 +4,12 @@
       <div class="col-xs-12 cero-padding">
         <div class="row marin-top">
           <div class="col-xs-6 center">
-            <%= link_to "Ingresa con Facebook",user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn width-100"%>
+            <%= link_to user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn width-100"%>
           </div>
           <div class="col-xs-6 center">
-             <%= link_to "Ingresa con Twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn width-100"%>
+             <%= link_to "Ingresa con Twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn width-100" do%>
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+             <%end%>
           </div>
         </div>
       </div>
