--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -6,7 +6,7 @@
           <div class="col-xs-6 center">
             <%= link_to user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn width-100" do%>
               <i class="fa fa-facebook" aria-hidden="true"></i>
-            <end%%>
+            <%end%>
           </div>
           <div class="col-xs-6 center">
              <%= link_to "Ingresa con Twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn width-100"%>
