--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -5,6 +5,7 @@
         <div class="row marin-top">
           <div class="col-xs-6 center">
             <%= link_to user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn width-100" do%>
+              Ingresa con 
               <i class="fa fa-facebook" aria-hidden="true"></i>
             <%end%>
           </div>
