--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -5,12 +5,15 @@
         <div class="row marin-top">
           <div class="col-xs-6 center">
             <%= link_to user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn width-100" do%>
-              Ingresa con 
+               <span>Ingresa con</span>
               <i class="fa fa-facebook" aria-hidden="true"></i>
             <%end%>
           </div>
           <div class="col-xs-6 center">
-             <%= link_to "Ingresa con Twitter",user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn width-100"%>
+            <%= link_to user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn width-100" do%>
+              <span>ingresar con</span>
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            <%end%>
           </div>
         </div>
       </div>
