--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -4,13 +4,13 @@
       <div class="col-xs-12 cero-padding">
         <div class="row marin-top">
           <div class="col-xs-6 center">
-            <%= link_to user_omniauth_authorize_path(:facebook),:class=>"waves-effect blue darken-4 btn width-100" do%>
+            <%= link_to user_omniauth_authorize_path(:facebook),:class=>"cero-padding waves-effect blue darken-4 btn width-100" do%>
                <span>Ingresa con</span>
               <i class="fa fa-facebook" aria-hidden="true"></i>
             <%end%>
           </div>
           <div class="col-xs-6 center">
-            <%= link_to user_omniauth_authorize_path(:twitter),:class=>"waves-effect blue btn width-100" do%>
+            <%= link_to user_omniauth_authorize_path(:twitter),:class=>"cero-padding waves-effect blue btn width-100" do%>
               <span>ingresar con</span>
               <i class="fa fa-twitter" aria-hidden="true"></i>
             <%end%>
