--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -2,7 +2,7 @@
   <%= form_for(resource, as: resource_name, url: session_path(resource_name),html:{:id=>"iniciar_sesion" ,:class =>"col s12 "}) do |f| %>
     <div class="row">
       <div class="col-xs-12 cero-padding">
-        <div class="row marin-top">
+        <div class="row marin-top margin-bottom">
           <div class="col-xs-6 center">
             <%= link_to user_omniauth_authorize_path(:facebook),:class=>"cero-padding waves-effect blue darken-4 btn width-100" do%>
                <span>Ingresa con</span>
@@ -11,7 +11,7 @@
           </div>
           <div class="col-xs-6 center">
             <%= link_to user_omniauth_authorize_path(:twitter),:class=>"cero-padding waves-effect blue btn width-100" do%>
-              <span>ingresar con</span>
+              <span>ingresa con</span>
               <i class="fa fa-twitter" aria-hidden="true"></i>
             <%end%>
           </div>
