--- a/app/views/parciales/_devise.html.erb
+++ b/app/views/parciales/_devise.html.erb
@@ -6,7 +6,7 @@
 					<div class="col-xs-6 center">
 						<%= link_to user_omniauth_authorize_path(:facebook),:class=>"cero-padding waves-effect blue darken-4 btn width-100" do%>
 							 <span>Ingresa con</span>
-							<i class="fa fa-facebook right" aria-hidden="true"></i>
+							<i class="fa fa-facebook " aria-hidden="true"></i>
 						<%end%>
 					</div>
 					<div class="col-xs-6 center">
